Sorting and some more DataStructures