@@ -29,8 +29,10 @@ class StringBasics {
         System.out.println(p1==p2);
         System.out.println(p1.equals(p2));
 
-        Integer i1 = new Integer(1);
-        Integer i2 = new Integer(1);
+        // Integer i1 = new Integer(1);
+        // Integer i2 = new Integer(1);
+        Integer i1 = Integer.valueOf(1);
+        Integer i2 = Integer.valueOf(2);
         System.out.println(i1==i2);
     }
 }
